05/01/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb.c: tgdb interface changed. Removing old call to tgdb_init and 
    tgdb_start and calling only tgdb_init with the correct parameters.

version 0.3.1 (04/28/2003):

04/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Reorganized the cvs tree

version 0.3.0 (04/11/2003):

04/11/2003 Bob Rossi <bob_rossi@cox.net>

    * Focus initially set to GDB window

04/09/2003 Bob Rossi <bob_rossi@cox.net>

    * If start_gdb fails, then cgdb exits cleanly.

04/05/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed CGDB_ESC_KEY to 27 for the several spots still calling wgetch
    * Fixed bug where if you enter a regex and then hit ESC to cancel, the
    line would never go away.

04/03/2003 Bob Rossi <bob_rossi@cox.net>

    * interface.c ( if_draw ): Removed a function that called refresh
    on the status bar. Also, Added a check to refresh the cgdb window
    if focus == cgdb.
    * cgdb.c ( remove realpath ): There is no more call to realpath to 
    determine the breakpoint.
    * Add another hack to keep relative file from file dialog: This way
    when the user sets a breakpoint on a file opened from the file 
    dialog, the relative file is known.

04/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Removed filedlg's main loop: filedlg's main loop is gone. It is now
    driven from cgdb's main loop. It recieve's a char at a time.
    * Removed call to wgetch in the process of removing filedlg's main loop
    * Removed optimizations from sources.c and scroller.c: I added a variable
    to determine if these objects needed to be displayed again. They are not
    worth the effort to maintain, since sometimes the screen NEEDS to be
    drawn again.

04/01/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb now works on windows XP in cygwin: Fixed creation of home directory.
    * Try to make configure fail if readline is not installed on system.

03/29/2003 Bob Rossi <bob_rossi@cox.net>
